# polymarket_bot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  test_odds_debug.cpp
config/: config.json  config_test.json  sports.json
docs/: config_setup.md  order_execution.md  trading_guide.md
examples/: config_usage.cpp  config_usage_updated.cpp  order_execution_example.cpp
sql/: schema.sql
src/: main.cpp  main_trading.cpp
src/api/: odds_api_client.cpp  odds_api_client.h  polymarket_api_client.cpp  polymarket_api_client.h
src/cli/: trade_dashboard.cpp  trade_dashboard.h
src/common/: types.h
src/config/: config_manager.cpp  config_manager.h  config_types.h
src/crypto/: signature_utils.cpp  signature_utils.h
src/market/: market_matcher.cpp  market_matcher.h
src/trading/: trade_executor.cpp  trade_executor.h  trade_manager.cpp  trade_manager.h
tests/: README.md  test_odds_api_client.cpp  test_odds_api_client_simple.cpp
